# apertiumhmm2dot

./: Makefile  Makefile.am  README.md  configure.ac  find_similar_ambiguity_class_repl.h  hmm2dot.cc  hmm2dot.sh  print_tagger_data.h  trace_streamed_types.cc  trace_tagger_model.cc  trace_tagger_spec.cc  trace_tagger_words.cc
