AM_CXXFLAGS = -Wall -Wextra

bin_PROGRAMS = hmm2dot trace-streamed-types trace-tagger-words trace-tagger-model trace-tagger-spec

hmm2dot_SOURCES = hmm2dot.cc
trace_streamed_types_SOURCES = trace_streamed_types.cc find_similar_ambiguity_class_repl.h  print_tagger_data.h
trace_tagger_words_SOURCES = trace_tagger_words.cc find_similar_ambiguity_class_repl.h  print_tagger_data.h
trace_tagger_model_SOURCES = trace_tagger_model.cc find_similar_ambiguity_class_repl.h  print_tagger_data.h
trace_tagger_spec_SOURCES = trace_tagger_spec.cc find_similar_ambiguity_class_repl.h  print_tagger_data.h
